# agent-economy

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
agent_economy/: __init__.py  __main__.py  clearing.py  command_workers.py  config.py  cost_estimator.py  costing.py  engine.py  finalize.py  gym_env.py  judges.py  learning_trace.py  ledger.py  llm_anthropic.py  llm_google.py  llm_ollama.py  llm_openai.py  llm_router.py  main.py  model_refs.py  observation.py  openai_bidder.py  openai_executor.py  planner.py  planner_workers.py  prompts.py  sandbox.py  scenario.py  schemas.py  state.py  submission.py  verify.py  worker_mux.py  worker_refs.py  worker_specs.py  worker_state.py  workspace_ignore.py
benchmarks/: noop_bidder.py  noop_exec.py  noop_workers.json  workers_compilerlite_baseline_52codex.json  workers_compilerlite_market.json  workers_local_qwen_3b8b.json  workers_market_mini_auto.json  workers_snake_baseline_52auto.json  workers_swebench_baseline_52auto.json
docs/: cross_repo_integration.md
institution_service/: __init__.py  __main__.py  clearing.py  command_workers.py  config.py  cost_estimator.py  costing.py  engine.py  finalize.py  gym_env.py  json_extract.py  jsonutil.py  judges.py  learning_trace.py  ledger.py  llm_ollama.py  llm_openai.py  llm_router.py  main.py  observation.py  openai_bidder.py  openai_executor.py  planner.py  planner_workers.py  prompts.py  sandbox.py  scenario.py  schemas.py  state.py  verify.py  worker_mux.py  worker_refs.py  worker_specs.py  worker_state.py
scenarios/: compilerlite.yaml  kvlite.yaml  nanogptlite.yaml  routerlite_parallel.yaml  snakelite.yaml  swebench_semver_bug.yaml
scripts/: export_transitions.py  summarize_run.py
tests/: conftest.py  helpers.py  test_clearing.py  test_command_workers_submission.py  test_discussion.py  test_e2e.py  (+22 more)
(+16 files in other folders)
