[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "institution-service"
version = "0.0.0"
description = "Task-market clearinghouse kernel (bids -> clear -> patch/verify -> settle -> ledger)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
institution-service = "institution_service.main:main"

[tool.setuptools.packages.find]
include = ["institution_service*"]

[tool.setuptools.package-data]
"institution_service.dashboard" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  ".beads",
  ".codex",
  ".venv",
  "runs",
]
